' @autogenerated
@startuml Clases
title Clases
left to right direction
class access.Role{
list()
retrieve()
create()
update()
delete()
}

class access.UserAccessTemporalCode{
list()
retrieve()
create()
update()
delete()
markLoginFail()
markLoginBlock()
markLoginOk()
generateMfaTemporalCode()
resetMfaTemporalCode()
generatePasswordRecover()
resetPasswordRecover()
}

class access.RelyingParty{
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

class access.TrustedClient{
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

class access.UserIdentity{
list()
retrieve()
create()
update()
delete()
}

class access.UserAcceptedTermnsOfUse{
list()
retrieve()
create()
update()
delete()
}

class access.TenantConfig{
list()
retrieve()
create()
update()
delete()
}

class access.SecurityDomain{
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

class access.LoginProvider{
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

class access.TenantTermsOfUse{
list()
retrieve()
create()
update()
delete()
}

class access.ScopeAssignation{
list()
retrieve()
create()
update()
delete()
}

class access.User{
list()
retrieve()
create()
update()
delete()
registerAccepted()
registerPending()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
}

class access.Tenant{
list()
retrieve()
create()
update()
delete()
enable()
disable()
}

class access.SecurityScope{
list()
retrieve()
create()
update()
delete()
disable()
enable()
}

access.Tenant "1"  o--  "N*" access.Role: tenant  
access.Role "N*"  o--*  "N*" access.SecurityDomain: domains
access.User "1"  o--  "N*" access.UserAccessTemporalCode: user  
access.User "1"  o--  "N*" access.UserIdentity: user  
access.RelyingParty "1"  o--  "N*" access.UserIdentity: relyingParty  
access.TrustedClient "1"  o--  "N*" access.UserIdentity: trustedClient  
access.UserIdentity "N*"  o--*  "N*" access.Role: roles
access.User "1"  o--  "N*" access.UserAcceptedTermnsOfUse: user  
access.TenantTermsOfUse "1"  o--  "N*" access.UserAcceptedTermnsOfUse: conditions  
access.Tenant "1"  o--  "N*" access.TenantConfig: tenant  
access.Tenant "1"  o--  "N*" access.LoginProvider: tenant  
access.Tenant "1"  o--  "N*" access.TenantTermsOfUse: tenant  
access.SecurityDomain "1"  o--  "N*" access.ScopeAssignation: securityDomain  
access.SecurityScope "1"  o--  "N*" access.ScopeAssignation: securityScope  
access.Tenant "1"  o--  "N*" access.User: tenant  
access.Tenant "N*"  o--*  "N*" access.TrustedClient: trustedClients
access.Tenant "N*"  o--*  "N*" access.RelyingParty: relingParties
access.TrustedClient "1"  o--  "N*" access.SecurityScope: trustedClient  
access.RelyingParty "1"  o--  "N*" access.SecurityScope: relyingParty  

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
